# MRHead

./: .gitignore  MRDumper.h  OpenCV自适应版本说明.txt  README.md  mrcvutil.h  mrdir.h  mrgl.h  mrglw.h  mrlm.h  mrlog.h  mropencv.h  mropencvstatic.h  mrtesseract.h  mrtime.h  mrutil.h  mrzxing.h  setup.sh
MRCrossPlatform/: CMakeLists.txt  MRCrossPlatform.cpp  Makefile
test/: DumpTest.cpp
